# OpticalFlow

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
src/: CMakeLists.txt  README.md
src/aws_scripts/: CMakeLists.txt  README.md  add_videos_to_process.py  benchmark_s3.py  example_videos_to_process.txt  measure_scalability.py  message_type.py  process_video_list.py  start_ec2_instance.py  test_add_videos_to_process.py  test_variable_size.py
src/datatypes/: CMakeLists.txt  image.cpp  image.h
src/datatypes/tests/: image_benchmark.cpp  image_tests.cpp
src/experiments/: CMakeLists.txt  CmakeLists.txt  cross_correlation_benchmark.cpp  optical_flow_mat_benchmark.cpp  overlap_add.cpp  overlap_add.h
src/experiments/tests/: dft_benchmark.cpp  overlap_add_benchmark.cpp  overlap_add_tests.cpp
src/ipython_notebooks/: plot_xcorr_benchmarks.ipynb
src/matlab/: Dockerfile  StdMotionEst.m  extract_feature_vectors.m  extract_features.m  plotCDF.m  plotHisto.m  runVideos.m
src/optical_flow/: CMakeLists.txt  farneback_flow.h  lk_flow.cpp  lk_flow.h  mock_flow.h  motion_estimation.cpp  motion_estimation.h  optical_flow.cpp  optical_flow.h  vector_statistics.cpp  vector_statistics.h
src/optical_flow/tests/: lk_flow_benchmark.cpp  lk_flow_tests.cpp  motion_estimation_tests.cpp  optical_flow_tests.cpp  vector_statistics_benchmark.cpp  vector_statistics_tests.cpp  visualize_flow.cpp
src/programs/: CMakeLists.txt  extract_features.cpp  farneback_flow.cpp  playback_video.cpp
src/r_code/: classify_motions.r  load_video_features.r
src/readers/: CMakeLists.txt  mock_reader.h  video_file_reader.cpp  video_file_reader.h
src/utilities/: CMakeLists.txt  utilities.cpp  utilities.h
src/utilities/tests/: utilities_tests.cpp
